--- a/.env
+++ b/.env
@@ -40,10 +40,10 @@ DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=sendmail://default
 ###< symfony/mailer ###
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://USERNAME:PASSWORD@defaultverify_peer=0
+# MAILER_DSN=sendmail://default
 ###< symfony/google-mailer ###
