--- a/.env
+++ b/.env
@@ -47,4 +47,4 @@ DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=sendmail://default
 ###< symfony/google-mailer ###
-MAILER_DSN=gmail://er.gouez@gmail.com:aipwvqyyhysfgcsl@default
+MAILER_DSN=gmail://xxxxxxx@gmail.com:xxxxxxxxxx@default
